--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Violet Valero # your name (or website title) here
+logo: "/images/AvatarMaker.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
-  Second description 
+  This website showcases my creative works from the Web Design Class. I hope you enjoy it.
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
